--- a/newtab.css
+++ b/newtab.css
@@ -1,64 +1,29 @@
-/*.fullscreen-bg {
-  position: fixed;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  overflow: hidden;
-  z-index: -100;
-}
-.fullscreen-bg__video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-@media (min-aspect-ratio: 16/9) {
-  .fullscreen-bg__video {
-    height: 300%;
-    top: -100%;
-  }
-}
-@media (max-aspect-ratio: 16/9) {
-  .fullscreen-bg__video {
-    width: 300%;
-    left: -100%;
-  }
-}
-@media (max-width: 767px) {
-  .fullscreen-bg {
-    background: url('../img/videoframe.jpg') center center / cover no-repeat;
-  }
-  .fullscreen-bg__video {
-    display: none;
-  }
-}*/
 body {
     background-color: #282828;
 }
 
 #time {
   margin: 0;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   opacity: .9;
-  color: white;
+  color: #fff;
   font-size: 150px;
   font-weight: bold;
   font-family: helvetica;
 }
 h1 {
   margin: 0;
-  position: absolute;
+  position: fixed;
   top: 5%;
-  left: 10%;
+  left: 200px;
   transform: translate(-50%, -50%);
-  color: white;
+  color: #fff;
   font-size: 50px;
   font-family: arial;
+  transition: 0.1s;
 }
 
 .sidenav {
@@ -72,7 +37,7 @@ h1 {
     background-color: #111;
     overflow-x: hidden;
     transition: 0.2s;
-    padding-top: 60px;
+    padding-top: 30px;
 }
 
 .sidenav a {
@@ -88,12 +53,56 @@ h1 {
     color: #f1f1f1;
 }
 
-#main {
-    transition: margin-left .2s;
-    padding: 16px;
+#menuButton {
+    position: fixed;
+    color: #fff;
+    font-size: 30px;
+    cursor: pointer;
+    transform: translate(16px, 16px) rotate(0deg);
+}
+
+#menuButton:hover {
+    color: #848484;
 }
 
 @media screen and (max-height: 450px) {
   .sidenav {padding-top: 15px;}
   .sidenav a {font-size: 18px;}
+}
+
+.fullscreen-bg {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -100;
+}
+.fullscreen-bgvideo {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+@media (min-aspect-ratio: 16/9) {
+  .fullscreen-bgvideo {
+    height: 300%;
+    top: -100%;
+  }
+}
+@media (max-aspect-ratio: 16/9) {
+  .fullscreen-bgvideo {
+    width: 300%;
+    left: -100%;
+  }
+}
+@media (max-width: 767px) {
+  .fullscreen-bg {
+    background: url('../img/videoframe.jpg') center center / cover no-repeat;
+  }
+  .fullscreen-bgvideo {
+    display: none;
+  }
 }
