--- a/newtab.css
+++ b/newtab.css
@@ -1,5 +1,16 @@
 body {
     background-color: #282828;
+    width: 100%;
+    height: 100%;
+
+    -webkit-touch-callout: none; /* iOS Safari */
+        -webkit-user-select: none; /* Safari */
+        -khtml-user-select: none; /* Konqueror HTML */
+        -moz-user-select: none; /* Firefox */
+            -ms-user-select: none; /* Internet Explorer/Edge */
+                user-select: none; /* Non-prefixed version, currently
+                                    supported by Chrome and Opera */
+
 }
 
 #time {
@@ -27,26 +38,28 @@ h1 {
 }
 
 .sidenav {
-    margin-top: 100px;
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: -10;
     top: 0;
     left: 0;
     background-color: #111;
     overflow-x: hidden;
     transition: 0.2s;
-    padding-top: 30px;
+    padding-top: 80px;
+    padding-right: 0px;
+    opacity: 0.8;
 }
 
 .sidenav a {
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 25px;
-    color: #818181;
+    color: #fff;
     display: block;
     transition: 0.1s;
+    opacity: 1;
 }
 
 .sidenav a:hover {
@@ -59,6 +72,7 @@ h1 {
     font-size: 30px;
     cursor: pointer;
     transform: translate(16px, 16px) rotate(0deg);
+    transition: 0.2s;
 }
 
 #menuButton:hover {
@@ -79,7 +93,7 @@ h1 {
   overflow: hidden;
   z-index: -100;
 }
-.fullscreen-bgvideo {
+.fullscreen-bg__video {
   position: absolute;
   top: 0;
   left: 0;
@@ -87,13 +101,13 @@ h1 {
   height: 100%;
 }
 @media (min-aspect-ratio: 16/9) {
-  .fullscreen-bgvideo {
+  .fullscreen-bg__video {
     height: 300%;
     top: -100%;
   }
 }
 @media (max-aspect-ratio: 16/9) {
-  .fullscreen-bgvideo {
+  .fullscreen-bg__video {
     width: 300%;
     left: -100%;
   }
@@ -102,7 +116,7 @@ h1 {
   .fullscreen-bg {
     background: url('../img/videoframe.jpg') center center / cover no-repeat;
   }
-  .fullscreen-bgvideo {
+  .fullscreen-bg__video {
     display: none;
   }
 }
